[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/module/AutoAim.gd" type="Script" id=1]

[node name="AutoAim" type="Area2D"]
script = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_AutoAim_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_AutoAim_area_exited"]
